--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "FreeCodeCamp Leaderboard project",
   "private": true,
   "author": "Melissa Kepler",
+  "homepage": "https://github.com/Missarachnid/fcc-leaderboard",
   "keywords": [
     "FreeCodeCamp",
     "react",
@@ -20,7 +21,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy" : "npm run build&&gh-pages -d build"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
+  }
 }
