--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "FreeCodeCamp Leaderboard project",
   "private": true,
   "author": "Melissa Kepler",
-  "homepage": "https://github.com/Missarachnid/fcc-leaderboard",
+  "homepage": "https://missarachnid.github.io/fcc-leaderboard/",
   "keywords": [
     "FreeCodeCamp",
     "react",
